# Extremum

./: CMakeLists.txt  README.md  dixotomia.cpp  dixotomia.h  doxfile  gold_sechenie.cpp  gold_sechenie.h  graphics.cpp  graphics.h  index.html  main.cpp  parser.cpp  perebor.cpp  perebor.h
tests/: dixotomia_tests.cpp  gold_sechenie_tests.cpp  graphics_tests.cpp  perebor_tests.cpp
